// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`speakAs renders 0 1`] = `
Array [
  .c0 {
  speak-as: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders function 1`] = `
Array [
  .c0 {
  speak-as: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: has;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: has;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders invalid theme path 1`] = `
Array [
  .c0 {
  speak-as: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders negative number 1`] = `
Array [
  .c0 {
  speak-as: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    speak-as: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-as: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    speak-as: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-as: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-as: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-as: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-as: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-as: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-as: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    speak-as: July;
  }
}

@media April {
  .c0 {
    speak-as: August;
  }
}

@media January {
  .c0 {
    speak-as: September;
  }
}

@media April {
  .c0 {
    speak-as: November;
  }
}

@media June {
  .c0 {
    speak-as: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    speak-as: July;
  }
}

@media April {
  .c0 {
    speak-as: August;
  }
}

@media January {
  .c0 {
    speak-as: September;
  }
}

@media April {
  .c0 {
    speak-as: November;
  }
}

@media June {
  .c0 {
    speak-as: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-as: January;
  }
}

@media April {
  .c0 {
    speak-as: December;
  }
}

@media January {
  .c0 {
    speak-as: April;
  }
}

@media April {
  .c0 {
    speak-as: May;
  }
}

@media June {
  .c0 {
    speak-as: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-as: January;
  }
}

@media April {
  .c0 {
    speak-as: December;
  }
}

@media January {
  .c0 {
    speak-as: April;
  }
}

@media April {
  .c0 {
    speak-as: May;
  }
}

@media June {
  .c0 {
    speak-as: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders postitive number 1`] = `
Array [
  .c0 {
  speak-as: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders string 1`] = `
Array [
  .c0 {
  speak-as: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: June;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: June;
}

<div
    className="c0"
  />,
]
`;

exports[`speakAs renders valid theme path 1`] = `
Array [
  .c0 {
  speak-as: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-as: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
